# haskell-client-proto

./: .gitignore  .gitmodules  CLAUDE.md  lean-consensus.cabal
.github/workflows/: ci.yml
app/: Main.hs  Options.hs
bench/: Main.hs
bench/Bench/: Storage.hs
bench/Bench/Consensus/: ForkChoice.hs  StateTransition.hs
bench/Bench/Crypto/: Hashing.hs  LeanMultisig.hs  LeanSig.hs
bench/Bench/Network/: Wire.hs
bench/Bench/SSZ/: Encoding.hs  Merkleization.hs
bench/Bench/Support/: Generators.hs
docs/: 00-overview.md  01-motivation.md  02-3sf-decoupled-protocol.md  03-3sf-mini.md  04-xmss-signatures.md  05-lean-multisig-architecture.md  06-devnet-roadmap.md  07-devnet-3-spec.md  08-ethlambda-architecture.md  09-leanspec-reference.md  10-implementation-scope.md
docs/dev/: 00-index.md  01-project-scaffold.md  02-ssz-implementation-guide.md  03-consensus-types.md  04-implementation-roadmap.md  05-library-decisions.md  06-ffi-abi-proposal.md  07-p2p-ipc-protocol.md
plans/: phase1-foundation.md  phase2-crypto-ffi.md  phase3-consensus-logic.md  phase4-networking.md  phase5-infrastructure.md
src/: Actor.hs  Config.hs  Genesis.hs  LeanConsensus.hs  Metrics.hs  Node.hs  NodeTypes.hs  SSZ.hs  Storage.hs  Validator.hs
src/Consensus/: Constants.hs  ForkChoice.hs  SlotTimer.hs  StateTransition.hs  Types.hs
src/Crypto/: Error.hs  Hashing.hs  KeyManager.hs  LeanMultisig.hs  LeanSig.hs  Operations.hs  SigningRoot.hs
src/Network/: Aggregator.hs  MessageHandler.hs  RPC.hs  Sync.hs
src/Network/P2P/: IPC.hs  Types.hs  Wire.hs
src/SSZ/: Bitlist.hs  Bitvector.hs  Common.hs  Container.hs  Derive.hs  List.hs  Merkleization.hs  Vector.hs
test/: Main.hs
test/Test/: Actor.hs  Genesis.hs  Metrics.hs  Node.hs  Storage.hs  Validator.hs
test/Test/Consensus/: ForkChoice.hs  Integration.hs  SlotTimer.hs  StateTransition.hs  Types.hs
test/Test/Crypto/: Hashing.hs  KeyManager.hs  LeanMultisig.hs  LeanSig.hs  Operations.hs
test/Test/Integration/: Devnet.hs
test/Test/LeanSpec/: ForkChoice.hs  Loader.hs  SSZ.hs  StateTransition.hs  Types.hs
test/Test/Network/: Aggregator.hs  IPC.hs  Integration.hs  MessageHandler.hs  P2PTypes.hs  RPC.hs  Sync.hs  Wire.hs
test/Test/SSZ/: Bitlist.hs  Bitvector.hs  Common.hs  Derive.hs  List.hs  Merkleization.hs  Support.hs  Vector.hs
test/Test/Support/: Helpers.hs  MockNetwork.hs
