cabal-version:   3.0
name:            lean-consensus
version:         0.1.0.0
synopsis:        Haskell Lean Consensus client for pq-devnet-3
license:         MIT
build-type:      Simple

common warnings
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates
                 -Wincomplete-uni-patterns -Wmissing-home-modules
                 -Wpartial-fields -Wredundant-constraints

library
    import:           warnings
    hs-source-dirs:   src
    default-language: GHC2021
    default-extensions:
        DataKinds
        TypeFamilies
        GADTs
        StandaloneDeriving
        DerivingStrategies
        GeneralizedNewtypeDeriving
        OverloadedStrings
        ScopedTypeVariables
        TypeApplications
    exposed-modules:
        LeanConsensus
    build-depends:
        base          >= 4.18  && < 5
      , bytestring    >= 0.11  && < 0.13

executable lean-consensus
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: GHC2021
    build-depends:
        base >= 4.18 && < 5
      , lean-consensus

test-suite lean-consensus-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    default-language: GHC2021
    default-extensions:
        DataKinds
        TypeApplications
        ScopedTypeVariables
        OverloadedStrings
    build-depends:
        base            >= 4.18 && < 5
      , lean-consensus
      , tasty           >= 1.4  && < 1.6
      , tasty-hunit     >= 0.10 && < 0.11
