cabal-version:   3.0
name:            lean-consensus
version:         0.1.0.0
synopsis:        Haskell Lean Consensus client for pq-devnet-3
license:         MIT
license-file:    LICENSE
build-type:      Simple

common warnings
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates
                 -Wincomplete-uni-patterns -Wmissing-home-modules
                 -Wpartial-fields -Wredundant-constraints -Werror

library
    import:           warnings
    hs-source-dirs:   src
    default-language: GHC2021
    default-extensions:
        DataKinds
        TypeFamilies
        GADTs
        StandaloneDeriving
        DerivingStrategies
        GeneralizedNewtypeDeriving
        OverloadedStrings
        ScopedTypeVariables
        TypeApplications
        FlexibleContexts
        FlexibleInstances
    exposed-modules:
        LeanConsensus
        SSZ
        SSZ.Bitlist
        SSZ.Bitvector
        SSZ.Common
        SSZ.Container
        SSZ.Derive
        SSZ.List
        SSZ.Merkleization
        SSZ.Vector
        Consensus.Constants
        Consensus.Types
        Crypto.Error
        Crypto.Hashing
        Crypto.SigningRoot
        Crypto.LeanSig
        Crypto.KeyManager
        Crypto.LeanMultisig
        Crypto.Operations
    build-depends:
        base          >= 4.18  && < 5
      , bytestring    >= 0.11  && < 0.13
      , crypton       >= 0.34  && < 1.1
      , memory        >= 0.18  && < 0.19
      , vector        >= 0.13  && < 0.14
      , containers    >= 0.6   && < 0.8
      , text          >= 2.0   && < 2.2
      , directory     >= 1.3   && < 1.4

executable lean-consensus
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: GHC2021
    build-depends:
        base >= 4.18 && < 5
      , lean-consensus

test-suite lean-consensus-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    default-language: GHC2021
    default-extensions:
        DataKinds
        TypeApplications
        ScopedTypeVariables
        OverloadedStrings
        DerivingStrategies
        FlexibleContexts
        FlexibleInstances
    other-modules:
        Test.SSZ.Bitlist
        Test.SSZ.Bitvector
        Test.SSZ.Common
        Test.SSZ.Derive
        Test.SSZ.List
        Test.SSZ.Merkleization
        Test.SSZ.Support
        Test.SSZ.Vector
        Test.Consensus.Types
        Test.Crypto.Hashing
        Test.Crypto.LeanSig
        Test.Crypto.KeyManager
        Test.Crypto.LeanMultisig
        Test.Crypto.Operations
    build-depends:
        base            >= 4.18 && < 5
      , lean-consensus
      , bytestring
      , vector
      , filepath
      , tasty           >= 1.4  && < 1.6
      , tasty-hunit     >= 0.10 && < 0.11
      , tasty-quickcheck >= 0.10 && < 0.12
      , QuickCheck      >= 2.14 && < 2.16
      , directory       >= 1.3  && < 1.4
      , temporary       >= 1.3  && < 1.4
      , async           >= 2.2  && < 2.3
